--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -107,7 +107,7 @@ button:focus, input:focus {
     font-weight: 400;
     background: #fff;
     cursor: pointer;
-    box-shadow:  2px 2px 2px 2px rgba(0, 0, 0, 0.25) inset, 2px 2px 2px 2px rgba(61, 34, 34, 0.25) inset;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.25) inset, 2px 2px 2px 2px rgba(61, 34, 34, 0.25) inset;
     transition: .6s ease-in-out;
     font-size: 50px;
 }
@@ -117,39 +117,41 @@ p {
     font-size: 3em;
 }
 
-.btnRefresh {
-    width: fit-content;
-    margin: 0 auto;
-}
-
 input {
     width: 200px;
     height: 50px;
-    color: #e65981;
+    color: #fff;
     border-style: none;
-    background: #fff;
+    background: #e65981;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     font-size: 1.5em;
     cursor: pointer;
+    margin-top: -50px;
 }
 
 input:hover {
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25) inset, 1px 1px 1px rgba(61, 34, 34, 0.25) inset;
     border-radius: 10px;
-    background-color: #e65981;
-    color: #fff;
+    background-color: #fff;
+    color: #e65981;
     transition: .3s ease-in-out;
 }
+
 .roundResult {
     font-weight: 600;
 }
+
 .finalResult {
     text-transform: uppercase;
-    font-weight: bold;    
+    font-weight: bold;
 }
 
 #result {
     line-height: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 /* myCSS */
